--- a/Workload/Views/PrjDatas/Delete.cshtml
+++ b/Workload/Views/PrjDatas/Delete.cshtml
@@ -28,35 +28,35 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PrjStart)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PrjStart)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PrjEnd)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PrjEnd)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Editor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Editor)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Status)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Status)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MonthData.Year)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MonthData.Year)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MonthData1.Year)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MonthData1.Year)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.V_Empdata.Unit)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.V_Empdata.Unit)
         </dd>
 
     </dl>
