--- a/Workload/Views/Worksheets/WorkloadDetail.cshtml
+++ b/Workload/Views/Worksheets/WorkloadDetail.cshtml
@@ -4,6 +4,13 @@
     var YearList = ViewData["YearData"];
     var MonthList = ViewData["MonthData"];
     var Emp = ViewData["Emp"];
+    var data = Model.ToArray();
+    }
+        
+@using (Html.BeginForm())
+{
+    
+
     <table class="table">
         <thead>
             <tr>
@@ -12,6 +19,7 @@
                 </th>
                 @foreach (var item in (List<Workload.Models.Worksheet>)YearList)
                 {
+                    //DOTO: 用MonthPK計算餘數,再去做td的colspan
                     <th>
                         @item.MonthData.Year
                     </th>
@@ -34,19 +42,26 @@
                     <td>
                         @emp.V_Empdata1.EN_Name
                     </td>
-                    @foreach (var m in Model)
+                    @for (int i = 0; i < data.Length; i++)
                     {
-                        if (m.V_Empdata1.EmpID == emp.V_Empdata1.EmpID)
+                        var item = data[i];
+                        
+                        if(item.V_Empdata1.EmpID==emp.V_Empdata1.EmpID)
+                        //if (m.V_Empdata1.EmpID == emp.V_Empdata1.EmpID)
                         {
                             <td>
-                                @m.Hour
+                                <text>@Html.EditorFor(modelItem=>item.Hour)</text>
+                               @* <text id="@(m.V_Empdata1.EmpID)_@(m.MonthData.MonthPK)">@m.Hour</text>*@
                             </td>
                         }
                     }
 
                 </tr>
             }
-
+            <tr>
+    
+                <td><button type="submit">Update All</button>  </td>
+            </tr>
         </tbody>
     </table>
-}
+    }
